# rubam

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: fuzz-nightly.yml  integration.yaml  release.yml  sbom.yml  security.yml  wheel-smoke-test.yml
docs/: bcftools_compatibility.md  pysam_compatibility_matrix.md  samtools_compatibility.md  vcf_conformance_matrix.md  wheel_smoke_test.md  windows_native_stress.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_aux_tags.rs  fuzz_bam_reader.rs  fuzz_cigar_walker.rs  fuzz_vcf_parser.rs
rubam/: __init__.py  _cli_shims.py  _tabix.py  cli.py  smoke_test.py
rubam/tools/: __init__.py
rubam/tools/bcftools/: __init__.py
src/: alignment.rs  bgzf_file.rs  common.rs  depth.rs  fasta_file.rs  fastx_file.rs  lib.rs  pileup.rs  pileup_iter.rs  stats.rs  tabix_file.rs  variant.rs
src/api/: aligned_segment.rs  alignment_file.rs  aux_data.rs  cigar.rs  error.rs  header.rs  mod.rs
src/tools/: calmd.rs  faidx.rs  flagstat.rs  idxstats.rs  index.rs  merge.rs  mod.rs  sort.rs  view.rs
src/tools/bcftools/: concat.rs  index.rs  mod.rs  norm.rs  query.rs  sort.rs  stats.rs  view.rs
tests/: _wsl_probe.py  api_aligned_segment.rs  api_alignment_file.rs  api_aux.rs  api_cigar.rs  api_header.rs  api_smoke.rs  cargo_bcftools_cli.rs  example.bam  example.bam.bai  harmos_compat.rs  integration_test.rs  proptest_cigar.rs  proptest_depth.proptest-regressions  proptest_depth.rs  test_aligned_segment.py  test_aligned_segment_setters.py  test_alignment_file.py  test_bam_write_builder.py  test_bam_write_field_level.py  test_bam_write_path.py  test_bcftools_concat.py  test_bcftools_index.py  test_bcftools_norm.py  test_bcftools_query.py  test_bcftools_sort.py  test_bcftools_stats.py  test_bcftools_view.py  test_cli_samtools.py  test_core.py  test_fasta_file.py  test_features.py  test_module_wrappers.py  test_pileup_iter.py  test_pysam_compat_v035_v038.py  test_pysam_parity_findings.py  test_tabix_file.py  test_tools_calmd.py  test_tools_faidx.py  test_tools_idxstats.py  (+8 more)
tests/data/: harmos_compat.bam  harmos_compat.bam.bai  harmos_compat.sam  validation_3sample_100rec.vcf.gz.tbi
tests/fixtures/: pysam_parity.bam  pysam_parity.bam.bai  smoke.bam  smoke.bam.bai
tests/samtools_depth_options/: expected.md  run_matrix.sh
tests/vcf_conformance/: test_conformance.py
tests/vcf_conformance/fixtures/: format_complex.vcf  indels.vcf  missing_values.vcf  mnv.vcf  multi_allelic.vcf  multi_sample.vcf  phased_gt.vcf  snv_only.vcf
